1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m ([Arguments -getAppConfigPath], [Arguments
	-getAppDataPath]): Copy default value to heap.
	(findDirectory, countSlashes, [Arguments -_getPath_:subpath:],
	[Arguments -_runningFromInstall_]): Use XFREE instead of xfree.

1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m (ensureEndingSlash): New function.
	([Arguments -setDefaultAppConfigPath:], [Arguments
	-setDefaultAppDataPath:]): Use it.
	([Arguments -_getPath_:subpath:]): New method.
	([Arguments -getConfigPath], [Arguments -getDataPath]): Use it
	(latter is new).
	([Arguments -_runningFromInstall_], [Arguments
	-_appendAppName_:]):
	([Arguments -getAppConfigPath], [Arguments -getAppDataPath]): Use
	them (latter is new).
	(SIGNATURE_SUBPATH, SIGNATURE, SIGNATURE_PATH): Versions for 
	subdirectory, file, and combined.  SIGNATURE is now Makefile.appl
	instead of VERSION.

	* Arguments.[hm]: New ivar defaultAppDataPath and setter.

	* Arguments.m ([Arguments +createBegin:]): Set a default for it.

	* Arguments.h, objectbase.h: Declare -getDataPath and getAppDataPath.

	* objectbase.h: Declare setDefaultAppDataPath:.

1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h: Declare setDefaultAppConfigPath:.

	* Arguments.m ([Arguments +createBegin:]): Set
	defaultAppConfigPath to "./".
	([Arguments -setDefaultAppConfigPath:]): New method.  Appends
	slash if missing.
	([Arguments -getSwarmHome]): Append slash if missing.
	([Arguments -getAppConfigPath]): Use stat instead of strcmp
	to see if directories are the same.

	* Arguments.h (Arguments): New ivar defaultAppConfigPath and
	setter.

	* Arguments.m: Include objectbase.h, collections.h, and swarmconfig.h.
	(countSlashes): New function.
	(findSwarm): Use it to determine how many directories to drop.

	* objectbase.h, Arguments.[hm]: New methods getConfigPath
	and getAppConfigPath.

	* Arguments.h: Don't declare singleton Arguments object here.
